# chathist

./: .gitignore  .goreleaser.yml  .tagpr  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile.toml  README.md  renovate.json  rust-toolchain.toml
.github/actions/release/: action.yml
.github/workflows/: build-test.yml  ci.yml  tagpr.yml
examples/config/: config.lua
src/: agent.rs  commands.rs  config.rs  main.rs  shared.rs
src/agent/: claude.rs
src/agent/claude/: actions.rs  config.rs  parser.rs
src/agent/claude/actions/: list.rs  pick.rs
src/commands/: config.rs  insert.rs  list.rs  pick.rs
src/config/: error.rs  templates.rs
src/config/templates/: list.rs  pick.rs
src/config/templates/pick/: config.lua  github.j2  github_compact.j2  slack.j2  standard.j2
src/shared/: git.rs  path.rs
