[package]
name = "chathist"
version = "0.4.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
walkdir = "2.5.0"
chrono = "0.4.42"
unicode-width = "0.2.2"
mlua = { version = "0.11", features = ["vendored", "lua54", "send"] }
thiserror = "2.0.17"
dirs = "6.0.0"
minijinja = "2.14.0"
anyhow = "1.0.100"

[dev-dependencies]
tempfile = "3.23.0"
